--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,6 @@ steps:
     git push --prune https://github.com/ModelT063/awsTestDeploy2 \
         +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
   displayName: 'Copy to Github'
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+  #condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
 
 
