made changes to the catalog and pii pages

--- a/team20/package.json
+++ b/team20/package.json
@@ -12,9 +12,10 @@
     "@aws-amplify/auth": "^5.1.10",
     "@aws-amplify/core": "^5.0.16",
     "@aws-amplify/ui-react": "^4.3.8",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.8",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
     "@next/font": "13.1.6",
     "@types/node": "18.11.18",
     "aws-amplify": "^5.0.16",
