Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
   
 steps:
 - bash: |
-    git push --prune https://github.com/ModelT063/awsTestDeploy2 \
+    git push --prune https://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@github.com//awsTestDeploy2 \
         +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
   displayName: 'Copy to Github'
   #condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
