--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,9 +11,8 @@ pool:
   
 steps:
 - bash: |
-    git push --prune https://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@github.com/awsTestDeploy2 \
+    git push --prune https://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@github.com/ModelT063/awsTestDeploy2 \
         +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
   displayName: 'Copy to Github'
-  #condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
-
+  condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
 
