--- a/team20/package.json
+++ b/team20/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
+    "mui": "^0.0.1",
     "mysql2": "^3.1.2",
     "next": "13.1.6",
     "pem": "^1.14.6",
