--- a/team20/package.json
+++ b/team20/package.json
@@ -29,6 +29,7 @@
     "pem": "^1.14.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recoil": "^0.7.7",
     "serverless-mysql": "^1.5.4",
     "typescript": "4.9.5"
   },
