--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express": "^4.18.2",
     "mui": "^0.0.1",
     "mysql2": "^3.1.2",
-    "next": "13.1.6",
+    "next": "^13.1.6",
     "pem": "^1.14.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
